Fix with the jumping sections bug

--- a/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
+++ b/frontend/src/components/CommentsContainer/styles/CommentsContainer.module.scss
@@ -27,6 +27,17 @@
     }
 }
 
+.centerHeader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+        width: max-content;
+        margin-top: 0px;
+    }
+}
+
 .observer {
     position: absolute;
     bottom: 200px;
