--- a/frontend/src/components/Sections/styles/Sections.module.scss
+++ b/frontend/src/components/Sections/styles/Sections.module.scss
@@ -10,7 +10,7 @@
     position: sticky;
     top: 86px;
     width: 100%;
-    height: calc(100vh - 86px);
+    height: calc(100vh - 88px);
 
     &::before, &::after {
         content: '';
